# resource-booking-zome

./: .gitignore  Cargo.toml  README.md
bookins.dna.workdir/: dna.json
dna/: Cargo.toml
dna/bookings.dna.workdir/: dna.json
dna/tests/: package.json
dna/tests/src/: index.ts
dna/zomes/bookings/: Cargo.toml
dna/zomes/bookings/src/: booking.rs  booking_request.rs  lib.rs  utils.rs
dna/zomes/calendar_events/: Cargo.toml
dna/zomes/calendar_events/src/: calendar_event.rs  lib.rs  utils.rs
dna/zomes/meeting_rooms/: Cargo.toml
dna/zomes/meeting_rooms/src/: lib.rs  meeting_room.rs  utils.rs
dna/zomes/resources/src/: lib.rs  meeting_room.rs  resource.rs
tests/src/: index.ts
ui/: LICENSE  README.md  custom-elements.json  index.html  package-lock.json  package.json  rollup.config.js  tsconfig.json
ui/demo/: index.html
ui/src/: HodResourceBookings.ts  client.ts  index.ts
ui/src/bookings/graphql/: schema.ts
ui/src/calendar_events/graphql/: resolvers.ts  schema.ts
ui/src/graphql/: schema.ts
ui/src/meeting_rooms/graphql/: schema.ts
ui/src/resources/graphql/: schema.ts
ui/stories/: index.stories.md
ui/tests/: test.test.js
zome/: Cargo.toml
zome/resource_bookings.dna.workdir/: dna.json
zome/tests/src/: index.ts
zome/zomes/meeting_rooms/: Cargo.toml
zome/zomes/meeting_rooms/src/: utils.rs
zome/zomes/resource_bookings/: Cargo.toml
zome/zomes/resource_bookings/src/: booking_request.rs  utils.rs
zomes/bookings/src/: booking.rs  booking_request.rs  lib.rs
zomes/resources/src/: lib.rs  meeting_room.rs
