[package]
name = "bookings"
version = "0.0.1"
authors = [ "guillem.cordoba@gmail.com" ]
edition = "2018"

[lib]
name = "bookings"
crate-type = [ "cdylib", "rlib" ]

[dependencies]
serde = "1"
derive_more = "0"

hdk3 = { git = "git://github.com/holochain/holochain", branch = "develop", package = "hdk3" }